# finder-git-viz

./: .gitignore  README.md  findergitvizconfig.example  pyproject.toml
launchd/: com.finder-git-viz.plist
scripts/: install-launchd.sh
src/finder_git_viz/: __init__.py  cli.py  config.py  git_status.py  globs.py  handler.py  repo_root.py  scan.py  status_mapping.py  tags.py  watch.py
