[project]
name = "finder-git-viz"
version = "0.2.1"
description = "Finder colored tags based on git status"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=4.0.0",
    "tomli>=2.0.0",
]

[project.scripts]
finder-git-viz = "finder_git_viz.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finder_git_viz"]

[project.urls]
github = "https://github.com/myrcutio/finder-git-viz"
